Feat: Agregar funcionalidades para crear y eliminar beneficios y costos, incluyendo iconos y secciones